--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase-admin": "^5.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.11"
+    "@webpack-blocks/dev-server2": "^0.4.0",
+    "@webpack-blocks/webpack2": "^0.4.0",
+    "babel-loader": "^7.1.1",
+    "html-webpack-plugin": "^2.30.1",
+    "react-scripts": "1.0.11",
+    "webpack": "^3.5.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.config.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
