--- a/package.json
+++ b/package.json
@@ -3,21 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase-admin": "^5.1.0",
+    "firebase": "^4.2.0",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-saga": "^0.15.6"
   },
   "devDependencies": {
     "@webpack-blocks/dev-server2": "^0.4.0",
     "@webpack-blocks/webpack2": "^0.4.0",
-    "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.23.0",
     "html-webpack-plugin": "^2.30.1",
     "react-scripts": "1.0.11",
     "webpack": "^3.5.4"
   },
   "scripts": {
-    "start": "webpack --config webpack.config.js",
-    "dev": "webpack --config webpack.config.js",
+    "start": "react-scripts start",
+    "// start": "webpack --watch webpack.config.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
