--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^4.2.0",
     "fs": "0.0.1-security",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
