set up twitter API...at least some of it

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -2,4 +2,7 @@
 #only accepts variables which start with REACT_APP_ due to create-back-app
 
 REACT_APP_FACEBOOK_SECRET_KEY=
+REACT_APP_TWITTER_CONSUMER_KEY=
+REACT_APP_TWITTER_CONSUMER_SECRET=
+ 
 
