--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # misc
 */.DS_Store
+#*/.env is currently allowed, for public environment variables...maybe don't want that though
 */.env.local
 */.env.development.local
 */.env.test.local
