--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
     "fb": "^2.0.0",
     "firebase": "^4.2.0",
     "fs": "0.0.1-security",
-    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.6.1",
@@ -32,5 +31,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
