single server, two process API/front end configuration

--- a/client/.env.local.sample
+++ b/client/.env.local.sample
@@ -1,6 +1,10 @@
 #don't put this into source control
 #only accepts variables which start with REACT_APP_ due to create-back-app
 
+
+#DON'T_TRY_TO_CHANGE REACT_APP_ to some other name space; just a time drain
+#if I ever with the backend on a different server anyway, it'll be fine to have 2 different environment variable files
+#probably won't overlap too much anyway with environment variables
 REACT_APP_FACEBOOK_SECRET_KEY=
 REACT_APP_TWITTER_CONSUMER_KEY=
 REACT_APP_TWITTER_CONSUMER_SECRET=
