--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "growth_tools",
+  "name": "growth_tools_client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,5 +34,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:5000"
 }
