--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fb": "^2.0.0",
     "firebase": "^4.2.0",
     "fs": "0.0.1-security",
+    "jade": "^1.11.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
