--- a/package.json
+++ b/package.json
@@ -1,26 +1,59 @@
 {
-  "name": "growth_tools_api",
+  "name": "growth_tools",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "body-parser": "~1.17.1",
     "codebird": "^2.6.0",
     "cookie-parser": "~1.4.3",
-    "express": "^4.15.4",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.4",
     "fb": "^2.0.0",
     "firebase": "^4.2.0",
     "fs": "0.0.1-security",
-    "jade": "^1.11.0",
+    "fs-extra": "^4.0.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "uuid": "^3.1.0",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-saga": "^0.15.6",
+    "serve-favicon": "~2.4.2",
+    "uuid": "^3.1.0",
+    "webpack-blocks-split-vendor": "^0.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@webpack-blocks/dev-server2": "^0.4.0",
+    "@webpack-blocks/webpack2": "^0.4.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "eslint-config-airbnb": "^15.1.0",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.5.6",
+    "webpack-blocks-happypack": "^0.1.3"
+  },
   "scripts": {
-    "start": "node index.js"
-  }
+    "start": "npm run dev",
+    "env:dev": "cross-env NODE_ENV=development",
+    "dev": "npm run env:dev -- webpack-dev-server",
+    "start_webpack": "webpack --watch webpack.config.js",
+    "start_api": "node api/index.js",
+    "build_client": "react-scripts client/build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts client/eject"
+  },
+  "proxy": "http://localhost:5000"
 }
