--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "description": "a react application",
   "keywords": [],
   "dependencies": {
+    "body-parser": "^1.18.1",
     "codebird": "^2.6.0",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "ejs": "2.3.4",
+    "express": "^4.15.4",
     "fb": "^2.0.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "morgan": "^1.8.2",
     "rc": "1.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -19,6 +23,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.15.6",
+    "request": "^2.81.0",
+    "serve-favicon": "^2.4.4",
     "uuid": "^3.1.0",
     "webpack-blocks-split-vendor": "^0.2.1"
   },
@@ -41,16 +47,16 @@
     "webpack-blocks-happypack": "^0.1.3"
   },
   "scripts": {
-    "dev": "npm run build && nodemon -w api -w config",
+    "start": "npm run dev",
+    "env:dev": "cross-env NODE_ENV=development",
+    "dev": "npm run env:dev -- npm run watch && node main.js",
     "watch": "webpack --watch webpack.config.js",
-    "start": "node app.js",
-    "build": "webpack",
-    "debug": "node debug app.js"
+    "build": "webpack"
   },
-  "main": "app.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/ryan/growth_ramp.git"
+    "url": "git://github.com/ryan/growth_ramp_client.git"
   },
   "author": "ryan",
   "license": ""
