making progress with passport

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ public/main.js
 public/main.js.map
 public/app.js
 public/app.js.map
+public/*hot-update.js
+public/*hot-update.js.map
+public/*hot-update.json
 
 # misc
 */.DS_Store
