--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "a react application",
   "keywords": [],
   "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.18.2",
     "codebird": "^2.6.0",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "ejs": "2.3.4",
     "express": "^4.15.4",
@@ -13,6 +16,10 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "morgan": "^1.8.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-twitter": "^1.0.4",
     "rc": "1.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -20,6 +27,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.15.6",
+    "serve-favicon": "^2.4.4",
     "uuid": "^3.1.0",
     "webpack-blocks-split-vendor": "^0.2.1"
   },
@@ -33,7 +41,6 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.0.5",
     "eslint-config-airbnb": "^15.1.0",
     "firebase": "^4.3.1",
     "html-webpack-plugin": "^2.30.1",
@@ -43,8 +50,7 @@
   },
   "scripts": {
     "start": "npm run dev",
-    "env:dev": "cross-env NODE_ENV=development",
-    "dev": "npm run env:dev -- node main.js",
+    "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
     "build": "webpack"
   },
