--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "dotenv": "^4.0.0",
     "ejs": "2.3.4",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "fb": "^2.0.0",
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "oauth": "^0.9.15",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
