--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
-    "codebird": "^2.6.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "ejs": "2.3.4",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
-    "fb": "^2.0.0",
+    "fs-extra": "^4.0.2",
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
