--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
     ["env", {
       "modules": false
     }],
-    "react"
+    "react",
+    "stage-1"
   ],
   "plugins": [
     ["transform-regenerator", "transform-object-rest-spread"]
@@ -21,6 +22,7 @@
     },
     "production": {
       "plugins": [
+        "transform-react-remove-prop-types"
       ]
     }
   }
