--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "eslint-config-airbnb": "^15.1.0",
     "firebase": "^4.3.1",
     "html-webpack-plugin": "^2.30.1",
