--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.15.6",
+    "sails.io.js": "^1.1.12",
     "serve-favicon": "^2.4.4",
+    "socket.io-client": "^2.0.3",
     "uuid": "^3.1.0",
     "webpack-blocks-split-vendor": "^0.2.1"
   },
