--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "growth_ramp_client",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "a react application",
   "keywords": [],
   "dependencies": {
@@ -56,7 +56,7 @@
     "webpack-blocks-happypack": "^0.1.3"
   },
   "scripts": {
-    "start": "npm run dev",
+    "start": "npm run build && npm run dev",
     "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
     "build": "webpack"
