--- a/package.json
+++ b/package.json
@@ -56,10 +56,11 @@
     "webpack-blocks-happypack": "^0.1.3"
   },
   "scripts": {
-    "start": "npm run build && npm run dev",
+    "start": "node main.js",
     "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
-    "build": "webpack"
+    "build": "webpack",
+    "heroku-postinstall": "webpack --define process.env.NODE_ENV=\"'production'\""
   },
   "main": "index.js",
   "repository": {
