--- a/package.json
+++ b/package.json
@@ -5,20 +5,31 @@
   "description": "a react application",
   "keywords": [],
   "dependencies": {
+    "@webpack-blocks/dev-server2": "^0.4.0",
+    "@webpack-blocks/webpack2": "^0.4.0",
     "aphrodite": "^1.2.4",
     "axios": "^0.16.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "dotenv": "^4.0.0",
     "ejs": "2.3.4",
+    "eslint-config-airbnb": "^15.1.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "fs-extra": "^4.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "node-sass": "^4.5.3",
     "oauth": "^0.9.15",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -33,27 +44,16 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.15.6",
     "sails.io.js": "^1.1.12",
+    "sass-loader": "^6.0.6",
     "serve-favicon": "^2.4.4",
     "socket.io-client": "^2.0.3",
     "uuid": "^3.1.0",
+    "webpack-blocks-happypack": "^0.1.3",
     "webpack-blocks-split-vendor": "^0.2.1"
   },
   "devDependencies": {
-    "@webpack-blocks/dev-server2": "^0.4.0",
-    "@webpack-blocks/webpack2": "^0.4.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "webpack-blocks-happypack": "^0.1.3"
+    "dotenv": "^4.0.0"
   },
   "scripts": {
     "start": "node main.js",
