--- a/package.json
+++ b/package.json
@@ -56,9 +56,12 @@
     "dotenv": "^4.0.0"
   },
   "scripts": {
-    "start": "node main.js",
+    "start": "npm run clean && npm run copy && node main.js",
     "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
+    "clean": "rimraf dist/*",
+    "copy": "copyfiles -f ./public/assets/* ./public/favicon.ico ./dist",
+
     "build": "webpack",
     "heroku-postinstall": "webpack --define process.env.NODE_ENV=\"'production'\""
   },
