--- a/package.json
+++ b/package.json
@@ -56,14 +56,13 @@
     "dotenv": "^4.0.0"
   },
   "scripts": {
-    "start": "npm run copy && npm run build node main.js",
     "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
+
+    "start": "npm run copy && npm run build && node main.js",
     "clean": "rimraf dist/*",
     "copy": "copyfiles -f ./public/* ./dist",
-
-    "build": "webpack",
-    "heroku-postinstall": "webpack --define process.env.NODE_ENV=\"'production'\""
+    "build": "webpack --define process.env.NODE_ENV=\"'production'\""
   },
   "main": "index.js",
   "repository": {
