--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
@@ -58,7 +59,6 @@
   "scripts": {
     "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
-
     "start": "npm run copy && npm run build && node main.js",
     "clean": "rm -rf dist/*",
     "copy": "cp -rf ./public ./dist",
