--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 
     "deploy": "npm run copy && git push heroku master",
     "copy": "cp -rf ./public ./dist",
+    "heroku-postbuild": "npm run build",
     "build": "webpack --define process.env.NODE_ENV=\"'production'\"",
     "start": "node main.js",
 
