more error messages when deploying

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ coverage
 build
 # getting rid of most of dist except what gets copied from public (index.html, favicon, manifest.json)
 dist/app*
+dist/main*
 dist/hot
 dist/*.png
 dist/*.js
