--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "deploy": "npm run copy && git push heroku master",
     "copy": "cp -rf ./public ./dist",
     "heroku-postbuild": "npm run build",
-    "build": "webpack --define process.env.NODE_ENV=\"'production'\"",
+    "build": "webpack --display-error-details --define process.env.NODE_ENV=\"'production'\"",
     "start": "node main.js",
 
     "clean": "rm -rf dist/*"
