--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "@webpack-blocks/assets": "^1.0.0-rc",
     "@webpack-blocks/dev-server2": "^0.4.0",
     "@webpack-blocks/webpack2": "^0.4.0",
     "aphrodite": "^1.2.4",
@@ -27,6 +28,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "fs": "^0.0.1-security",
     "fs-extra": "^4.0.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
@@ -53,6 +55,7 @@
     "serve-favicon": "^2.4.4",
     "socket.io-client": "^2.0.3",
     "uuid": "^3.1.0",
+    "webpack-blocks": "^1.0.0-rc",
     "webpack-blocks-happypack": "^0.1.3",
     "webpack-blocks-split-vendor": "^0.2.1"
   },
@@ -62,13 +65,11 @@
   "scripts": {
     "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
-
     "deploy": "npm run copy && git push heroku master",
     "copy": "cp -rf ./public ./dist",
     "heroku-postbuild": "npm run build",
     "build": "webpack --display-error-details --define process.env.NODE_ENV=\"'production'\"",
     "start": "node main.js",
-
     "clean": "rm -rf dist/*"
   },
   "main": "main.js",
