--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   },
   "keywords": [],
   "dependencies": {
-    "@webpack-blocks/assets": "^1.0.0-rc",
-    "@webpack-blocks/dev-server2": "^0.4.0",
-    "@webpack-blocks/webpack2": "^0.4.0",
     "aphrodite": "^1.2.4",
     "axios": "^0.16.2",
     "babel-cli": "^6.26.0",
@@ -24,6 +21,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.28.7",
     "ejs": "2.3.4",
     "eslint-config-airbnb": "^15.1.0",
     "express": "^4.15.4",
@@ -54,10 +52,10 @@
     "sass-loader": "^6.0.6",
     "serve-favicon": "^2.4.4",
     "socket.io-client": "^2.0.3",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "uuid": "^3.1.0",
-    "webpack-blocks": "^1.0.0-rc",
-    "webpack-blocks-happypack": "^0.1.3",
-    "webpack-blocks-split-vendor": "^0.2.1"
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "dotenv": "^4.0.0"
