--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "oauth": "^0.9.15",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-linkedin-oauth2": "^1.5.0",
     "passport-twitter": "^1.0.4",
     "rc": "1.0.1",
     "react": "^15.6.1",
