--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dropzone": "^4.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-select": "^1.0.0-rc.10",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.15.6",
