--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "backblaze-b2": "^1.0.2",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
@@ -34,6 +35,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "oauth": "^0.9.15",
     "passport": "^0.4.0",
