--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-twitter": "^1.0.4",
     "rc": "1.0.1",
     "react": "^15.6.1",
+    "react-datepicker": "^1.0.4",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.2.0",
     "react-redux": "^5.0.6",
