--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "backblaze-b2": "^1.0.2",
     "body-parser": "^1.18.2",
+    "chart.js": "^2.7.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "ejs": "2.3.4",
@@ -45,6 +46,7 @@
     "passport-twitter": "^1.0.4",
     "rc": "1.0.1",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.7.0",
     "react-datepicker": "^1.0.4",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.2.0",
