--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "moment-range": "^3.1.1",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "node-sass": "^4.5.3",
