--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "serve-favicon": "^2.4.4",
     "socket.io-client": "^2.0.3",
     "style-loader": "^0.19.0",
+    "url": "^0.11.0",
     "url-loader": "^0.6.2",
     "uuid": "^3.1.0",
     "webpack": "^3.8.1"
