--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "dev": "node main.js",
     "watch": "webpack --watch webpack.config.js",
     "deploy": "npm run copy && git push heroku master",
-    "copy": "cp -rf ./public ./dist",
+    "copy": "cp -rf ./public/* ./dist",
     "heroku-postbuild": "npm run build",
     "build": "webpack --display-error-details --define process.env.NODE_ENV=\"'production'\"",
     "start": "node main.js",
